<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/chooser_dialog_hint"
            style="@style/DefaultFont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingStart="@dimen/padding__medium"
            android:paddingTop="@dimen/padding_large"
            android:paddingEnd="@dimen/padding_large"
            android:paddingBottom="@dimen/padding_large"
            android:text="@string/chooser_dialog_hint"
            android:textColor="@color/colorBackgroound"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/movie_chooser_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackgroound"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/chooser_dialog_hint">

            <com.google.android.material.textview.MaterialTextView
                style="@style/DefaultFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:drawableStart="@drawable/ic_movie_chooser"
                android:drawablePadding="@dimen/padding_small"
                android:text="@string/movies_label"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tv_chooser_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackgroound"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/movie_chooser_container">

            <com.google.android.material.textview.MaterialTextView
                style="@style/DefaultFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:drawableStart="@drawable/ic_tv_chooser"
                android:drawablePadding="@dimen/padding_small"
                android:text="@string/tv_shows_label"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>