<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/app_name"
        android:icon="@drawable/ic_search_white"
        app:showAsAction="collapseActionView|ifRoom" />
</menu>