...
                android:layout_width="match_parent"
                android:layout_height="48dp" />

        </com.google.android.material.appbar.MaterialToolbar>

        <include
            android:id="@+id/error_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            layout="@layout/try_again_load_list"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/search_toolbar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_shows_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:listitem="@layout/movie_list_item"
            app:spanCount="2"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/search_toolbar"
...
