...
                        android:id="@+id/popular_movie_txtv"
                        style="@style/DefaultFont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@string/popular_movie"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/popular_movie_container"
                        android:layout_width="match_parent"
...
                        android:id="@+id/now_playing_movie_txtv"
                        style="@style/DefaultFont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:text="@string/now_playing_movies"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/popular_movie_container" />

                    <LinearLayout
                        android:id="@+id/now_playing_movie_container"
                        android:layout_width="match_parent"
...
